@@ -1,4 +1,8 @@
-﻿drkns 09.11.2014 00:34:51 +0200 - build 4175
+﻿drkns 09.11.2014 02:12:34 +0200 - build 4176
+
+1. GCC.
+
+drkns 09.11.2014 00:34:51 +0200 - build 4175
 
 1. Уточнение 4174.
 
